--- a/scripts/nginx.conf.j2
+++ b/scripts/nginx.conf.j2
@@ -16,9 +16,6 @@ http {
     set_real_ip_from 0.0.0.0/0 ;
     real_ip_recursive on ;
     real_ip_header x-forwarded-for ;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
 
     server_name _;
 {% if nginx.ssl.enabled is sameas true %}
@@ -38,5 +35,22 @@ http {
 
     include ip_whitelist.conf;
     include ip_blacklist.conf;
+
+    location / {
+      proxy_pass $http_x_cf_forwarded_url;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+      add_header X-Cache-Status $upstream_cache_status;
+    }
+
+    location /nginx_status {
+      stub_status on;
+      access_log off;
+      allow 10.0.0.0/8;
+      allow 172.16.0.0/12;
+      allow 192.168.0.0/16;
+      deny all;
+    }
   }
 }
