--- a/scripts/nginx.conf.j2
+++ b/scripts/nginx.conf.j2
@@ -1,4 +1,5 @@
-worker_processes  2;
+worker_processes  4;
+daemon off;
 
 events {
   worker_connections  1024;
@@ -8,14 +9,29 @@ error_log /dev/stderr;
 
 http {
   access_log /dev/stdout;
+  default_type application/octet-stream;
+  include mime.types;
   sendfile on;
-  keepalive_timeout 65;
+  tcp_nopush on;
+  port_in_redirect off;
+  keepalive_timeout 30;
   server_tokens off;
 
+{% if nginx.resolver | length	< 1 %}
+  resolver 127.0.0.1;
+{% else %}
+{% for ns in nginx.resolver %}
+  resolver {{ ns }};
+{% endfor %}
+{% endif %}
+
   server {
-    set_real_ip_from 0.0.0.0/0 ;
-    real_ip_recursive on ;
-    real_ip_header x-forwarded-for ;
+    set_real_ip_from 10.0.0.0/8;
+    set_real_ip_from 172.16.0.0/12;
+    set_real_ip_from 192.168.0.0/16;
+    set_real_ip_from 127.0.0.1/32;
+    real_ip_recursive on;
+    real_ip_header X-Forwarded-For;
 
     server_name _;
 {% if nginx.ssl.enabled is sameas true %}
