remove IP filter

--- a/scripts/nginx.conf.j2
+++ b/scripts/nginx.conf.j2
@@ -49,9 +49,6 @@ http {
     listen {{ nginx.port }} default_server;
 {% endif %}
 
-    include ip_whitelist.conf;
-    include ip_blacklist.conf;
-
     location / {
       proxy_pass $http_x_cf_forwarded_url;
       proxy_set_header X-Real-IP $remote_addr;
@@ -63,6 +60,7 @@ http {
     location /nginx_status {
       stub_status on;
       access_log off;
+      satisfy any;
       allow 10.0.0.0/8;
       allow 172.16.0.0/12;
       allow 192.168.0.0/16;
